force-app/main/default/objects/ssot__Employee__dlm/fields/ssot__AlternateEmail__c.field-meta.xml
<CustomField>
    <fullName>ssot__AlternateEmail__c</fullName>
    <label>Alternate Email</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AlternateEmail</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>