force-app/main/default/objects/ssot__Employee__dlm/fields/ssot__EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmployeeNumber__c</fullName>
    <label>Employee Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmployeeNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>