force-app/main/default/objects/ssot__Employee__dlm/fields/ssot__EmployeeStatusEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmployeeStatusEndDateTime__c</fullName>
    <label>Employee Status End Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmployeeStatusEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>