force-app/main/default/objects/ssot__Employee__dlm/fields/ssot__EmployeeType__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmployeeType__c</fullName>
    <label>Employee Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmployeeType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>