force-app/main/default/objects/ssot__Employee__dlm/fields/ssot__rel_1727355347254_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1727355347254_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee_IndividualId_map_Individual_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>Employee_IndividualId_map_Individual_rel</relationshipLabel>
    <relationshipName>rel_1727355347254_end</relationshipName>
    <type>Lookup</type>
</CustomField>